--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "symfony/validator": "6.4.*",
         "symfony/web-link": "6.4.*",
         "symfony/yaml": "6.4.*",
+        "symfonycasts/verify-email-bundle": "^1.15",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/string-extra": "^3.8",
         "twig/twig": "^2.12|^3.0"
